--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # Godot-specific ignores
 .import/
 export.cfg
-export_presets.cfg
+export_credentials.cfg
 
 # Imported translations (automatically generated from CSV files)
 *.translation
@@ -13,13 +13,3 @@ export_presets.cfg
 .mono/
 data_*/
 mono_crash.*.json
-
-# IDE
-.vscode/
-
-# save files
-save-file.cfg
-
-# Project specific
-testing.tscn
-testing.gd
